<resources>
    <string name="app_name">InstagramGalery</string>

    <string name="splash_title">Compartilhe suas fotos\ncom seus amigos</string>
    <string name="splash_subtitle">Instagram é o melhor app de fotos...</string>

    <string name="login_title">Entrar</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Senha</string>
    <string name="login_buttonlogin">Entrar</string>

    <string name="login_ops">Ops</string>
    <string name="login_message_error_login">Usuário ou senha inválidos</string>
    <string name="login_ok">Ok</string>

    <string name="login_signup">Você não tem conta? <b>Crie aqui</b></string>

    <string name="main_title">Feed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
