<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_login" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="56dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sourcesansprobold"
                    android:text="@string/login_title"
                    android:textColor="@color/white"
                    android:textSize="34sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="46dp"
                    android:fontFamily="@font/opensansbold"
                    android:text="@string/login_email"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/opensansregular"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="46dp"
                    android:fontFamily="@font/opensansbold"
                    android:text="@string/login_password"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/opensansregular"
                    android:inputType="textPassword"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="36dp"
                    android:background="@drawable/background_button"
                    android:fontFamily="@font/opensansbold"
                    android:text="@string/login_buttonlogin"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/opensansregular"
                    android:gravity="center"
                    android:text="@string/login_signup"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


            </LinearLayout>


        </RelativeLayout>


    </ScrollView>


</RelativeLayout>